Right Side Panel (Incomplete)
- Added right side panel
- Added bottom colored panel for team
- Started top column currently containing date and time, profile picture, name and position.

--- a/website/homepage.html
+++ b/website/homepage.html
@@ -14,6 +14,8 @@
 
   </head>
   <body class="roboto-light">
+
+<div class = "container">
     <div id="leftPanel">
         <div class="webEm-logo">
             <h1>WebEm</h1>
@@ -24,10 +26,12 @@
                 <path strokeLinecap="round" strokeLinejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
             </svg>
         </div>
+
         <div>
         </br>
         </br>
         </div>
+        
         <div class="regularpanel">
             <svg  xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 17 17"  width="2.5vw" height="2.5vw">
                 <path d="M8.543 2.232a.75.75 0 0 0-1.085 0l-5.25 5.5A.75.75 0 0 0 2.75 9H4v4a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-1a1 1 0 1 1 2 0v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V9h1.25a.75.75 0 0 0 .543-1.268l-5.25-5.5Z" />
@@ -73,9 +77,26 @@
             </svg>
             <p class="icon">Bulletin</p>
         </div>
-
-        
     </div>
+
+    <div class = "rightPanel">
+        <!--Main Panel-->
+        <div class = "rightPanelRectangle">
+            <div class = "topColumnContainer">
+                <div id = "topColumnDateAndTime">
+                    <h1>Tuesday</h1>
+                </div>
+                    <!---->
+                    <div id = "topColumnProfile">
+                        <span class = "space"></span>
+                        <h1>Juan De La Cruz</h1><br>
+                        <span class = "profileCircle"></span>
+                    </div>
+            </div>
+        </div>
+    </div>
+
+</div>
   </body>
 </html>
   
